--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="./Juego/index.html"> Clicka para el juego</a>
+    <a href="./Juego/index.html"> Clicka para skill tree test Map</a>
 </body>
 </html>
